// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationCard component renders correctly with full notification 1`] = `
<div
  className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
>
  <div
    className="flex"
  >
    <div
      className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
    >
      <svg
        viewBox="0 0 1 1"
      >
        <rect
          fill="#000"
          height={1}
          width={1}
        />
        <text
          dy="0.178"
          fill="#FFF"
          style={
            Object {
              "fontFamily": "Inter",
              "fontSize": 0.5,
              "fontWeight": "bold",
            }
          }
          textAnchor="middle"
          x={0.5}
          y={0.5}
        >
          Gi
        </text>
      </svg>
    </div>
    <div
      className="my-auto inline-block ml-5"
    >
      <p
        className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
      >
        New Pull Request
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — notipie
      </p>
    </div>
  </div>
  <div
    className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
  />
  <p
    className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
  >
    <span>
      #12 add some new amazing functionality

Closes #10. Changes both in 'core' and 'ui'. Needs additional work with this and that.
    </span>
  </p>
  <div
    className="flex"
  >
    <div
      className="inline-block"
    >
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — by 
        Github
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        2h ago
      </p>
    </div>
    <div
      className="inline-grid grid-cols-3 gap-x-5 ml-auto my-auto mr-2"
    >
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="21 8 21 21 3 21 3 8"
          />
          <rect
            height="5"
            width="22"
            x="1"
            y="3"
          />
          <line
            x1="10"
            x2="14"
            y1="12"
            y2="12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20 6 9 17 4 12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard component renders correctly with full with image notification 1`] = `
<div
  className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
>
  <div
    className="flex"
  >
    <div
      className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default border dark:bg-gray-300 dark:border-gray-300"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <div
      className="my-auto inline-block ml-5"
    >
      <p
        className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
      >
        New Pull Request
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — notipie
      </p>
    </div>
  </div>
  <div
    className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
  />
  <p
    className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
  >
    <span>
      #12 add some new amazing functionality

Closes #10. Changes both in 'core' and 'ui'. Needs additional work with this and that.
    </span>
  </p>
  <div
    className="flex"
  >
    <div
      className="inline-block"
    >
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — by 
        Github
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        2h ago
      </p>
    </div>
    <div
      className="inline-grid grid-cols-3 gap-x-5 ml-auto my-auto mr-2"
    >
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="21 8 21 21 3 21 3 8"
          />
          <rect
            height="5"
            width="22"
            x="1"
            y="3"
          />
          <line
            x1="10"
            x2="14"
            y1="12"
            y2="12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20 6 9 17 4 12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard component renders correctly with full with very long text notification 1`] = `
<div
  className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
>
  <div
    className="flex"
  >
    <div
      className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
    >
      <svg
        viewBox="0 0 1 1"
      >
        <rect
          fill="#000"
          height={1}
          width={1}
        />
        <text
          dy="0.178"
          fill="#FFF"
          style={
            Object {
              "fontFamily": "Inter",
              "fontSize": 0.5,
              "fontWeight": "bold",
            }
          }
          textAnchor="middle"
          x={0.5}
          y={0.5}
        >
          Gi
        </text>
      </svg>
    </div>
    <div
      className="my-auto inline-block ml-5"
    >
      <p
        className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
      >
        New Pull Request
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — notipie
      </p>
    </div>
  </div>
  <div
    className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
  />
  <p
    className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
  >
    <span>
      Explicabo ipsum iusto qui porro iste possimus ad voluptatem. Nam maxime voluptatem nostrum deleniti saepe. Officia dolor velit sunt velit placeat amet
      <span
        aria-label="show more"
        className="text-blue-500 dark:text-blue-400 cursor-pointer"
        onClick={[Function]}
      >
        [...]
      </span>
    </span>
  </p>
  <div
    className="flex"
  >
    <div
      className="inline-block"
    >
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — by 
        Github
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        2h ago
      </p>
    </div>
    <div
      className="inline-grid grid-cols-3 gap-x-5 ml-auto my-auto mr-2"
    >
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="21 8 21 21 3 21 3 8"
          />
          <rect
            height="5"
            width="22"
            x="1"
            y="3"
          />
          <line
            x1="10"
            x2="14"
            y1="12"
            y2="12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20 6 9 17 4 12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard component renders correctly with minimal notification 1`] = `
<div
  className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
>
  <div
    className="flex"
  >
    <div
      className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
    >
      <svg
        viewBox="0 0 1 1"
      >
        <rect
          fill="#000"
          height={1}
          width={1}
        />
        <text
          dy="0.178"
          fill="#FFF"
          style={
            Object {
              "fontFamily": "Inter",
              "fontSize": 0.5,
              "fontWeight": "bold",
            }
          }
          textAnchor="middle"
          x={0.5}
          y={0.5}
        >
          Gi
        </text>
      </svg>
    </div>
    <div
      className="my-auto inline-block ml-5"
    >
      <p
        className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
      >
        New Pull Request
      </p>
    </div>
  </div>
  <div
    className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
  />
  <p
    className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
  >
    <span />
  </p>
  <div
    className="flex"
  >
    <div
      className="inline-block"
    >
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — by 
        Github
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        2h ago
      </p>
    </div>
    <div
      className="inline-grid grid-cols-3 gap-x-5 ml-auto my-auto mr-2"
    >
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="21 8 21 21 3 21 3 8"
          />
          <rect
            height="5"
            width="22"
            x="1"
            y="3"
          />
          <line
            x1="10"
            x2="14"
            y1="12"
            y2="12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20 6 9 17 4 12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard component renders correctly with partial notification 1`] = `
<div
  className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
>
  <div
    className="flex"
  >
    <div
      className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
    >
      <svg
        viewBox="0 0 1 1"
      >
        <rect
          fill="#000"
          height={1}
          width={1}
        />
        <text
          dy="0.178"
          fill="#FFF"
          style={
            Object {
              "fontFamily": "Inter",
              "fontSize": 0.5,
              "fontWeight": "bold",
            }
          }
          textAnchor="middle"
          x={0.5}
          y={0.5}
        >
          Gi
        </text>
      </svg>
    </div>
    <div
      className="my-auto inline-block ml-5"
    >
      <p
        className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
      >
        New Pull Request
      </p>
    </div>
  </div>
  <div
    className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
  />
  <p
    className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
  >
    <span>
      #12 add some new amazing functionality

Closes #10. Changes both in 'core' and 'ui'. Needs additional work with this and that.
    </span>
  </p>
  <div
    className="flex"
  >
    <div
      className="inline-block"
    >
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — by 
        Github
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        2h ago
      </p>
    </div>
    <div
      className="inline-grid grid-cols-3 gap-x-5 ml-auto my-auto mr-2"
    >
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="21 8 21 21 3 21 3 8"
          />
          <rect
            height="5"
            width="22"
            x="1"
            y="3"
          />
          <line
            x1="10"
            x2="14"
            y1="12"
            y2="12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20 6 9 17 4 12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationCard component renders correctly with read notification 1`] = `
<div
  className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
>
  <div
    className="flex"
  >
    <div
      className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
    >
      <svg
        viewBox="0 0 1 1"
      >
        <rect
          fill="#000"
          height={1}
          width={1}
        />
        <text
          dy="0.178"
          fill="#FFF"
          style={
            Object {
              "fontFamily": "Inter",
              "fontSize": 0.5,
              "fontWeight": "bold",
            }
          }
          textAnchor="middle"
          x={0.5}
          y={0.5}
        >
          Gi
        </text>
      </svg>
    </div>
    <div
      className="my-auto inline-block ml-5"
    >
      <p
        className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
      >
        New Pull Request
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — notipie
      </p>
    </div>
  </div>
  <p
    className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
  >
    <span>
      #12 add some new amazing functionality

Closes #10. Changes both in 'core' and 'ui'. Needs additional work with this and that.
    </span>
  </p>
  <div
    className="flex"
  >
    <div
      className="inline-block"
    >
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        — by 
        Github
      </p>
      <p
        className="text-xs font-bold text-gray-500 dark:text-gray-400"
      >
        2h ago
      </p>
    </div>
    <div
      className="inline-grid grid-cols-3 gap-x-5 ml-auto my-auto mr-2"
    >
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="21 8 21 21 3 21 3 8"
          />
          <rect
            height="5"
            width="22"
            x="1"
            y="3"
          />
          <line
            x1="10"
            x2="14"
            y1="12"
            y2="12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="20 6 9 17 4 12"
          />
        </svg>
      </button>
      <button
        className="inline"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="stroke-current text-gray-500 dark:text-gray-400 w-5 h-5"
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
